[project]
name = "wandb-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning>=2.4.0",
    "numpy>=2.2.0",
    "ray[tune]>=2.40.0",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "wandb==0.18.7",
]
